# tulip-garden

./: .gitignore  PROJECT_SUMMARY.md
server/: Cargo.toml  Dockerfile  fly.toml
server/src/: main.rs
tulip-garden/: EASTER_EGG.md  README.md  package.json  tsconfig.tsbuildinfo
tulip-garden/app/: TulipGarden.js  TulipGarden.tsx  layout.js  layout.tsx  page.js  page.tsx
tulip-garden/app/admin/: page.tsx
tulip-garden/app/poll/: page.js  page.tsx
